--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,7 +1,17 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding: 20px;
+  background-color: #18bc9c;
+}
+
+.main-card {
+  margin-top: 100px;
+  border-radius: 15px;
+  color: #757575;
+  background-color: #ffffff;
+  box-shadow: 3px 3px 12px 0 #128c74;
 }
 
 .save-note {
@@ -9,13 +19,23 @@ html, body {
 }
 
 .icons i {
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 1.5rem;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 1.2rem;
   cursor: pointer;
 }
 
-.note-textarea, .note-title {
+.note {
+  margin: 20px 15px 0;
+  border-radius: 15px;
+  padding: 20px;
+  min-height: calc(25vh);
+  box-shadow: 3px 3px 12px 0 #128c74;
+  background-color: #ffffff;
+}
+
+.note-textarea,
+.note-title {
   color: #000000;
   width: 100%;
   outline: none;
@@ -25,36 +45,30 @@ html, body {
 .note-textarea {
   resize: none;
   height: calc(100% - 63px);
-  padding-top: 15px;
 }
 
 .note-title {
   height: 50px;
-  margin-top: 13px;
   font-size: 3rem;
 }
 
-.note-title:read-only, .note-textarea:read-only {
+.note-title:read-only,
+.note-textarea:read-only {
   color: #757575;
 }
 
 .list-container .card {
-  height: calc(100vh - 70px);
-  border-bottom: none;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.list-container {
-  padding-left: 0;
+  margin-top: 20px;
+  padding: 20px;
+  min-height: calc(25vh);
+  border-radius: 15px;
+  box-shadow: 3px 3px 12px 0 #128c74;
 }
 
 .list-container .list-group,
 .list-container .list-group-item:first-child,
 .list-container .card {
   border-top: none;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
 }
 
 .list-container i {
@@ -65,6 +79,5 @@ html, body {
 .list-container .list-group-item {
   border-left: none;
   border-right: none;
-  padding: 20px;
   cursor: pointer;
 }
